[gd_scene load_steps=10 format=3 uid="uid://c3jjxg1ikomnh"]

[ext_resource type="Script" path="res://scripts/globali/UI/menu/pause_menu.gd" id="1_fkyik"]
[ext_resource type="FontFile" uid="uid://ci3inxy6xbgfy" path="res://assets/globali/GUI/fonts/ThaleahFat.ttf" id="1_gsj33"]
[ext_resource type="Shader" path="res://scenes/globali/UI/pause_menu.gdshader" id="2_ij8lt"]
[ext_resource type="Theme" uid="uid://cnk304tv4ytv5" path="res://assets/globali/GUI/default.tres" id="3_5vbtk"]
[ext_resource type="Texture2D" uid="uid://23vlpsuu2hgj" path="res://assets/globali/GUI/GUI.png" id="3_8vv8l"]
[ext_resource type="PackedScene" uid="uid://docl2niryulbx" path="res://scenes/globali/UI/menu/options_menu/options_menu.tscn" id="6_iu5w7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ni0ly"]
texture = ExtResource("3_8vv8l")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0
region_rect = Rect2(17, 82, 14, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kpa6"]
atlas = ExtResource("3_8vv8l")
region = Rect2(99, 83, 10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_utjsd"]
shader = ExtResource("2_ij8lt")
shader_parameter/amount = 1.5

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_fkyik")
metadata/_edit_use_anchors_ = true

[node name="openButtonContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="openButton" type="Button" parent="openButtonContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_ni0ly")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ni0ly")
theme_override_styles/normal = SubResource("StyleBoxTexture_ni0ly")
icon = SubResource("AtlasTexture_2kpa6")
icon_alignment = 1
expand_icon = true

[node name="MenuContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="BlurBackground" type="MarginContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = -20
theme_override_constants/margin_top = -20
theme_override_constants/margin_right = -20
theme_override_constants/margin_bottom = -20

[node name="ColorRect" type="ColorRect" parent="MenuContainer/BlurBackground"]
material = SubResource("ShaderMaterial_utjsd")
layout_mode = 2

[node name="Menu" type="MarginContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="MenuContainer/Menu"]
custom_minimum_size = Vector2(160, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_8vv8l")
region_rect = Rect2(2, 34, 44, 44)
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/Menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Resume" type="Button" parent="MenuContainer/Menu/VBoxContainer"]
custom_minimum_size = Vector2(116, 35)
layout_mode = 2
theme = ExtResource("3_5vbtk")
theme_override_fonts/font = ExtResource("1_gsj33")
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="Options" type="Button" parent="MenuContainer/Menu/VBoxContainer"]
custom_minimum_size = Vector2(116, 35)
layout_mode = 2
theme = ExtResource("3_5vbtk")
theme_override_fonts/font = ExtResource("1_gsj33")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="Quit" type="Button" parent="MenuContainer/Menu/VBoxContainer"]
custom_minimum_size = Vector2(116, 35)
layout_mode = 2
theme = ExtResource("3_5vbtk")
theme_override_fonts/font = ExtResource("1_gsj33")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("6_iu5w7")]
visible = false
layout_mode = 2
anchors_preset = 0

[connection signal="pressed" from="openButtonContainer/openButton" to="." method="_on_open_button_pressed"]
[connection signal="pressed" from="MenuContainer/Menu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="button_down" from="MenuContainer/Menu/VBoxContainer/Options" to="." method="_on_options_button_down"]
[connection signal="pressed" from="MenuContainer/Menu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
